--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,9 @@ before_script:
   - echo 'zend.assertions=1' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - echo 'assert.exception=On' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
-script: phpunit
+script:
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_success:
+ - travis_retry php coveralls.phar -v
+ - bash <(curl -s https://codecov.io/bash)
