--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3"
+        "phpunit/phpunit": "^6.3",
+        "codeclimate/php-test-reporter": "@dev"
     }
 }
